Switch to TailwindCSS and start actually doing something

--- a/index.html
+++ b/index.html
@@ -2,19 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz App</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    /* Custom styles for dark mode transition and general body styling */
+    body {
+      font-family: 'Inter', sans-serif;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+    /* Styles for the quiz options buttons */
+    #options button {
+      transition: background-color 0.2s ease, color 0.2s ease;
+    }
+    /* Styles for the correct answer highlight */
+    .correct-answer {
+      background-color: #4CAF50 !important; /* Green */
+      color: white !important;
+    }
+    /* Styles for the incorrect answer highlight */
+    .incorrect-answer {
+      background-color: #F44336 !important; /* Red */
+      color: white !important;
+    }
+    /* Styles for the selected answer highlight (if incorrect) */
+    .selected-incorrect {
+      background-color: #FFC107 !important; /* Orange/Amber */
+      color: white !important;
+    }
+  </style>
 </head>
-<body>
-  <div id="timer">Time left: 2:00:00</div>
-  <div id="quiz-container">
-    <div id="question-number"></div>
-    <div id="question-text"></div>
-    <div id="options"></div>
-    <div id="feedback"></div>
-    <div class="navigation">
-      <button onclick="prevQuestion()">Prev</button>
-      <button onclick="nextQuestion()">Next</button>
+<body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100 min-h-screen flex flex-col items-center justify-center p-4">
+
+  <!-- Dark Mode Toggle -->
+  <button id="darkModeToggle" class="absolute top-4 right-4 p-2 rounded-full bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 shadow-md focus:outline-none">
+    <i class="fas fa-moon dark:hidden"></i>
+    <i class="fas fa-sun hidden dark:inline-block"></i>
+  </button>
+
+  <!-- Landing Page Section -->
+  <div id="landing-page" class="w-full max-w-md bg-white dark:bg-gray-800 rounded-lg shadow-xl p-8 text-center transition-all duration-300 ease-in-out">
+    <h1 class="text-4xl font-extrabold mb-6 text-gray-800 dark:text-gray-100">Welcome to the Quiz!</h1>
+    <p class="text-lg mb-8 text-gray-600 dark:text-gray-300">Test your knowledge with our challenging questions.</p>
+    
+    <div id="success-rate-container" class="mb-8 p-4 bg-gray-100 dark:bg-gray-700 rounded-md shadow-inner">
+      <p class="text-md font-semibold text-gray-700 dark:text-gray-200">Your Average Success Rate:</p>
+      <p id="average-success-rate" class="text-3xl font-bold text-blue-600 dark:text-blue-400 mt-2">--%</p>
+    </div>
+
+    <button id="startQuizButton" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition-all duration-300 ease-in-out focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50">
+      Start Quiz
+    </button>
+  </div>
+
+  <!-- Quiz Container Section (Initially hidden) -->
+  <div id="quiz-container" class="hidden w-full max-w-2xl bg-white dark:bg-gray-800 rounded-lg shadow-xl p-8 transition-all duration-300 ease-in-out">
+    <div id="timer" class="text-center text-xl font-semibold mb-6 text-red-600 dark:text-red-400">Time left: 2:00:00</div>
+    <div id="question-number" class="text-lg font-bold mb-4 text-gray-700 dark:text-gray-200"></div>
+    <div id="question-text" class="text-2xl font-semibold mb-6 text-gray-900 dark:text-gray-100"></div>
+    <div id="options" class="space-y-4">
+      <!-- Options buttons will be injected here by JavaScript -->
+    </div>
+    <div id="feedback" class="mt-6 text-lg font-bold text-center"></div>
+    <div class="navigation flex justify-between mt-8">
+      <button onclick="prevQuestion()" class="bg-gray-300 hover:bg-gray-400 dark:bg-gray-600 dark:hover:bg-gray-700 text-gray-800 dark:text-gray-200 font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50">
+        Prev
+      </button>
+      <button onclick="nextQuestion()" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+        Next
+      </button>
     </div>
   </div>
 
