--- a/index.html
+++ b/index.html
@@ -1,78 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz App</title>
-  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
-    /* Custom styles for dark mode transition and general body styling */
     body {
       font-family: 'Inter', sans-serif;
       transition: background-color 0.3s ease, color 0.3s ease;
     }
-    /* Styles for the quiz options buttons */
     #options button {
-      transition: background-color 0.2s ease, color 0.2s ease;
+      transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+      border: 2px solid transparent;
     }
-    /* Styles for the correct answer highlight */
+    /* --- Test Mode Style --- */
+    .selected-answer {
+        background-color: #3B82F6 !important; /* Blue-500 */
+        color: white !important;
+        border-color: #2563EB !important; /* Blue-600 */
+    }
+    /* --- Training Mode Styles --- */
     .correct-answer {
-      background-color: #4CAF50 !important; /* Green */
+      background-color: #22c55e !important; /* Green-500 */
       color: white !important;
+      border-color: #16a34a !important; /* Green-600 */
     }
-    /* Styles for the incorrect answer highlight */
     .incorrect-answer {
-      background-color: #F44336 !important; /* Red */
+      background-color: #ef4444 !important; /* Red-500 */
       color: white !important;
+      border-color: #dc2626 !important; /* Red-600 */
     }
-    /* Styles for the selected answer highlight (if incorrect) */
-    .selected-incorrect {
-      background-color: #FFC107 !important; /* Orange/Amber */
-      color: white !important;
-    }
+    /* --- Summary Screen Styles --- */
+    .summary-correct { background-color: #dcfce7; }
+    .dark .summary-correct { background-color: #166534; }
+    .summary-incorrect { background-color: #fee2e2; }
+    .dark .summary-incorrect { background-color: #991b1b; }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100 min-h-screen flex flex-col items-center justify-center p-4">
 
-  <!-- Dark Mode Toggle -->
   <button id="darkModeToggle" class="absolute top-4 right-4 p-2 rounded-full bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 shadow-md focus:outline-none">
     <i class="fas fa-moon dark:hidden"></i>
     <i class="fas fa-sun hidden dark:inline-block"></i>
   </button>
 
-  <!-- Landing Page Section -->
   <div id="landing-page" class="w-full max-w-md bg-white dark:bg-gray-800 rounded-lg shadow-xl p-8 text-center transition-all duration-300 ease-in-out">
-    <h1 class="text-4xl font-extrabold mb-6 text-gray-800 dark:text-gray-100">Welcome to the Quiz!</h1>
-    <p class="text-lg mb-8 text-gray-600 dark:text-gray-300">Test your knowledge with our challenging questions.</p>
+    <h1 class="text-4xl font-extrabold mb-2 text-gray-800 dark:text-gray-100">Quiz Biologie</h1>
+    <p class="text-lg mb-6 text-gray-600 dark:text-gray-300">Alege modul de joc.</p>
     
-    <div id="success-rate-container" class="mb-8 p-4 bg-gray-100 dark:bg-gray-700 rounded-md shadow-inner">
-      <p class="text-md font-semibold text-gray-700 dark:text-gray-200">Your Average Success Rate:</p>
+    <div class="flex flex-col space-y-4 mb-8">
+        <button id="startTrainingButton" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition-all duration-300 ease-in-out">
+          Antrenează-te
+        </button>
+        <button id="startTestButton" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition-all duration-300 ease-in-out">
+          Testează-te
+        </button>
+    </div>
+
+    <div id="success-rate-container" class="p-4 bg-gray-100 dark:bg-gray-700 rounded-md shadow-inner">
+      <p class="text-md font-semibold text-gray-700 dark:text-gray-200">Rata ta medie de succes (Mod Test):</p>
       <p id="average-success-rate" class="text-3xl font-bold text-blue-600 dark:text-blue-400 mt-2">--%</p>
     </div>
-
-    <button id="startQuizButton" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition-all duration-300 ease-in-out focus:outline-none focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50">
-      Start Quiz
-    </button>
   </div>
 
-  <!-- Quiz Container Section (Initially hidden) -->
   <div id="quiz-container" class="hidden w-full max-w-2xl bg-white dark:bg-gray-800 rounded-lg shadow-xl p-8 transition-all duration-300 ease-in-out">
-    <div id="timer" class="text-center text-xl font-semibold mb-6 text-red-600 dark:text-red-400">Time left: 2:00:00</div>
+    <div id="timer" class="text-center text-xl font-semibold mb-6 text-red-600 dark:text-red-400"></div>
     <div id="question-number" class="text-lg font-bold mb-4 text-gray-700 dark:text-gray-200"></div>
     <div id="question-text" class="text-2xl font-semibold mb-6 text-gray-900 dark:text-gray-100"></div>
-    <div id="options" class="space-y-4">
-      <!-- Options buttons will be injected here by JavaScript -->
-    </div>
+    <div id="options" class="space-y-4"></div>
     <div id="feedback" class="mt-6 text-lg font-bold text-center"></div>
-    <div class="navigation flex justify-between mt-8">
-      <button onclick="prevQuestion()" class="bg-gray-300 hover:bg-gray-400 dark:bg-gray-600 dark:hover:bg-gray-700 text-gray-800 dark:text-gray-200 font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50">
+    <div class="navigation flex justify-between items-center mt-8">
+      <button onclick="prevQuestion()" class="bg-gray-300 hover:bg-gray-400 dark:bg-gray-600 dark:hover:bg-gray-700 text-gray-800 dark:text-gray-200 font-bold py-2 px-6 rounded-full shadow-md">
         Prev
       </button>
-      <button onclick="nextQuestion()" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full shadow-md transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+      <button id="homeButton" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-full shadow-md">
+        Home
+      </button>
+      <button onclick="nextQuestion()" id="next-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full shadow-md">
         Next
+      </button>
+    </div>
+  </div>
+
+  <div id="summary-screen" class="hidden w-full max-w-4xl bg-white dark:bg-gray-800 rounded-lg shadow-xl p-8 my-8">
+    <h2 class="text-3xl font-bold text-center mb-4">Sumar Test</h2>
+    <p id="summary-score" class="text-2xl text-center font-semibold mb-6"></p>
+    <div id="summary-details" class="space-y-4 max-h-96 overflow-y-auto"></div>
+    <div class="text-center mt-8">
+      <button id="back-to-home" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full shadow-lg">
+        Înapoi la început
       </button>
     </div>
   </div>
