--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz App</title>
+  <title>Biochem Final</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -48,7 +48,7 @@
 
   <div id="landing-page" class="w-full max-w-md bg-white dark:bg-gray-800 rounded-lg shadow-xl p-8 text-center transition-all duration-300 ease-in-out">
     <h1 class="text-4xl font-extrabold mb-2 text-gray-800 dark:text-gray-100">Quiz Biologie</h1>
-    <p class="text-lg mb-6 text-gray-600 dark:text-gray-300">Alege modul de joc.</p>
+    <p class="text-lg mb-6 text-gray-600 dark:text-gray-300">Alege modul</p>
     
     <div class="flex flex-col space-y-4 mb-8">
         <button id="startTrainingButton" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition-all duration-300 ease-in-out">
@@ -73,13 +73,13 @@
     <div id="feedback" class="mt-6 text-lg font-bold text-center"></div>
     <div class="navigation flex justify-between items-center mt-8">
       <button onclick="prevQuestion()" class="bg-gray-300 hover:bg-gray-400 dark:bg-gray-600 dark:hover:bg-gray-700 text-gray-800 dark:text-gray-200 font-bold py-2 px-6 rounded-full shadow-md">
-        Prev
+        Înapoi
       </button>
       <button id="homeButton" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-6 rounded-full shadow-md">
-        Home
+        Acasă
       </button>
       <button onclick="nextQuestion()" id="next-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded-full shadow-md">
-        Next
+        Înainte
       </button>
     </div>
   </div>
