--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
     </div>
   </div>
 
+  <div id="pass-fail-card" class="text-center text-xl font-bold rounded-lg p-4 my-4 hidden"></div>
+
   <!-- Summary Screen -->
   <div id="summary-screen" class="hidden w-full max-w-4xl bg-white dark:bg-dark-primary rounded-lg shadow-xl p-8 my-8">
     <h2 class="text-3xl font-bold text-center mb-4">Sumar Test</h2>
